@@ -20,4 +20,5 @@ COPY --from=builder /app/target/*.jar app.jar
 EXPOSE 8080
 ENV PORT 8080
 
-ENTRYPOINT ["java", "-jar", "app.jar"]
+# ENTRYPOINT ["java", "-jar", "app.jar"]
+ENTRYPOINT ["java", "--enable-preview", "-jar", "app.jar"]
